fix(css): adjust flex alignment with updates to justify-content and align-items

--- a/src/app/casino/gameview/gameview.component.css
+++ b/src/app/casino/gameview/gameview.component.css
@@ -374,7 +374,7 @@ iframe{
 
     .game-name span {
         margin: 0;
-        justify-content: start;
+        justify-content: flex-start;
         align-items: center;
     }
 
@@ -941,7 +941,7 @@ iframe{
 
 .modal-header{
     display: flex;
-    justify-content: end;
+    justify-content: flex-end;
     border: none;
     z-index: 9001 !important;
 }
