--- a/src/app/shared/layout/header/header.component.css
+++ b/src/app/shared/layout/header/header.component.css
@@ -556,7 +556,7 @@ body .change-theme {
         max-width: 100vw;
         overflow-x: auto;
         height: 39px;
-        justify-content: start;
+        justify-content: flex-start;
         background-color: var(--header);
     }
 
@@ -697,7 +697,7 @@ body .change-theme {
     }
 
     .side {
-        justify-content: start;
+        justify-content: flex-start;
     }
 
     .side-right {
