--- a/src/app/shared/layout/modals/register-v3-modal/register-v3-modal.component.scss
+++ b/src/app/shared/layout/modals/register-v3-modal/register-v3-modal.component.scss
@@ -149,7 +149,7 @@ h3 {
 
 .close-register-cancel-header {
     display: flex;
-    justify-content: end;
+    justify-content: flex-end;
     margin-top: 10px;
 }
 
